--- a/pages/kickit.html
+++ b/pages/kickit.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" href="../css/foundation.css">
 		<link rel="stylesheet" href="../css/style.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="robots" content="noindex,nofollow"/>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,600' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Montserrat:400' rel='stylesheet' type='text/css'>
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
@@ -15,7 +16,7 @@
 
 	<body>
 		<div class="header" id="mission">
-			<a href="index.html"> <h1>Nicole Calace</h1> </a>
+			<a href="../index.html"> <h1>Nicole Calace</h1> </a>
 			<h2>Student. Interaction designer.</h2>
 		</div>
 
@@ -23,7 +24,7 @@
 
 		<div class="header" id="links">
 			<ul class="navbar">
-				<li> <div class="selectedpage"> <a href="index.html">product design</a> </div> </li>
+				<li> <div class="selectedpage"> <a href="../index.html">product design</a> </div> </li>
 				<li> <div class="unselectedpage"> <a href="graphicdesign.html">graphic design</a> </div> </li>
 				<li> <div class="unselectedpage"> <a href="about.html">about</a> </div> </li>
 			</ul>
@@ -44,7 +45,7 @@
 					<p>We created user scenarios to aid in designing the feature. For example, a user might want to get lunch with friends, but has no idea who is free. This user would create an "open invite" for lunch that all of his friends could see and join. Based off this user scenario, I worked with the team's engineers on wireframes to figure how this feature could be integrated with the existing product.</p>
 				</div>
 				<div class="large-5 columns">
-					<img src="../img/kickit/kickit-wireframes.jpg">
+					<img src="../img/kickit/kickit-wireframes.jpg" alt="Kick.it Wireframes">
 				</div>
 				
 			</div>
@@ -60,14 +61,14 @@
 					<p>Some more visual explorations can be seen <a href="https://www.behance.net/wip/392495">here</a>.</p>
 				</div>
 				<div class="large-5 columns">
-					<img src="../img/kickit/kickit-on-phone.png">
+					<img src="../img/kickit/kickit-on-phone.png" alt="Kick.it Home">
 				</div>
 			</div>
 
 			<hr>
 
 			<div class="returnbutton">
-				<p><a href="index.html">return to portfolio</a></p>
+				<p><a href="../index.html">return to portfolio</a></p>
 			</div>
 		</div>
 
