--- a/pages/lab126.html
+++ b/pages/lab126.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" href="../css/foundation.css">
 		<link rel="stylesheet" href="../css/style.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="robots" content="noindex,nofollow"/>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,600' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Montserrat:400' rel='stylesheet' type='text/css'>
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
@@ -15,7 +16,7 @@
 	
 	<body>
 		<div class="header" id="mission">
-			<a href="index.html"> <h1>Nicole Calace</h1> </a>
+			<a href="../index.html"> <h1>Nicole Calace</h1> </a>
 			<h2>Student. Interaction designer.</h2>
 		</div>
 		<a href="pact.html"> <div class="arrow leftarrow"> &#60; </div> </a>
@@ -23,7 +24,7 @@
 
 		<div class="header" id="links">
 			<ul class="navbar">
-				<li> <div class="selectedpage"> <a href="index.html">product design</a> </div> </li>
+				<li> <div class="selectedpage"> <a href="../index.html">product design</a> </div> </li>
 				<li> <div class="unselectedpage"> <a href="graphicdesign.html">graphic design</a> </div> </li>
 				<li> <div class="unselectedpage"> <a href="about.html">about</a> </div> </li>
 			</ul>
@@ -43,14 +44,14 @@
 					<p>I worked on interaction and visual design of a product idea with a small team of designers. I created wireframes, designed workflows and made visual comps. For my self-governed intern project, I designed a new feature for the product. </p>
 				</div>
 				<div class="moreinfo large-5 columns" id="lablogo">
-					<img class="medremove" src="../img/lab126_logo.png">
+					<img class="medremove" src="../img/lab126_logo.png" alt="Lab Logo">
 				</div>			
 			</div>
 
 			<hr>
 
 			<div class="returnbutton">
-				<p><a href="index.html">return to portfolio</a></p>
+				<p><a href="../index.html">return to portfolio</a></p>
 			</div>
 			
 		</div>
