--- a/pages/pact.html
+++ b/pages/pact.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" href="../css/foundation.css">
 		<link rel="stylesheet" href="../css/style.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="robots" content="noindex,nofollow"/>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,600' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Montserrat:400' rel='stylesheet' type='text/css'>
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
@@ -15,7 +16,7 @@
 
 	<body>
 		<div class="header" id="mission">
-			<a href="index.html"> <h1>Nicole Calace</h1> </a>
+			<a href="../index.html"> <h1>Nicole Calace</h1> </a>
 			<h2>Student. Interaction designer.</h2>
 		</div>
 
@@ -24,7 +25,7 @@
 
 		<div class="header" id="links">
 			<ul class="navbar">
-				<li> <div class="selectedpage"> <a href="index.html">product design</a> </div> </li>
+				<li> <div class="selectedpage"> <a href="../index.html">product design</a> </div> </li>
 				<li> <div class="unselectedpage"> <a href="graphicdesign.html">graphic design</a> </div> </li>
 				<li> <div class="unselectedpage"> <a href="about.html">about</a> </div> </li>
 			</ul>
@@ -34,7 +35,7 @@
 		<div class="maincontent projectinfo">
 			<h1>Achieve</h1>
 			<h2>UX Design Lead</h2>
-			<h3>August 2013 - January</h3>
+			<h3>August 2013 - January 2014</h3>
 			<p>Achieve, (formerly know as 'Pact') is a goal-tracking platform that was developed as a research project under Professor Cosley. Our project was accepted to <b>CHI 2014</b> as a work in progress.</p>
 
 			<hr>
@@ -45,11 +46,11 @@
 					<p>Building upon previous studies conducted at Cornell, our research group wanted to explore the effects of social media on how people achieve goals. To do this, we decided to develop our own goal tracking platform, Achieve, from scratch. We sent out surveys about goal tracking applications to college students, our target audience. The results led us to realize that students would feel more motivated to achieve their goals if they completed their goals in groups. A study by Burke and Settles showed that groups that consist of already existing relationships inspires higher performance, so we decided to create a platform focused on accomplishing goals with pre-existing friend groups.</p>
 					<p>Below are pictures from some of our brainstorming sessions: </p>
 					<div class="large-9 columns moreinfo large-centered small-centered">
-						<div class="large-block-grid-1" id="topspace">
-							<li><img src="../img/pact/whiteboard1.jpg"> <div class="centeredlabel"><p><i>Figuring out the flow of the signup process</i></p></div></li>
-							<li><img src="../img/pact/whiteboard2.jpg"> <div class="centeredlabel"><p><i>Planning out the team and individual page</i></p></div></li>
-							<li><img src="../img/pact/whiteboard3.jpg"> <div class="centeredlabel"><p><i>Planning out navigation and event creation</i></p></div></li>
-						</div>
+						<ul class="large-block-grid-1" id="topspace">
+							<li><img src="../img/pact/whiteboard1.jpg" alt="Whiteboard"> <div class="centeredlabel"><p><i>Figuring out the flow of the signup process</i></p></div></li>
+							<li><img src="../img/pact/whiteboard2.jpg" alt="Whiteboard"> <div class="centeredlabel"><p><i>Planning out the team and individual page</i></p></div></li>
+							<li><img src="../img/pact/whiteboard3.jpg" alt="Whiteboard"> <div class="centeredlabel"><p><i>Planning out navigation and event creation</i></p></div></li>
+						</ul>
 					</div>
 				</div>
 			</div>
@@ -60,14 +61,14 @@
 					<p></p>
 					<h4>High-fidelity Wireframes for the Group Goal Pages</h4>
 					<p></p>
-					<div class="large-block-grid-1">
-						<li><img src="../img/pact/pact-groupgoal.png"><p>On the left is the social feed for the group goals page. Here users can view and comment on their friends progress of their shared goals. The middle image is the 'Group Progress' view, which gives users a more visual way to check their group's progress. Clicking a on a user's profile picture or name brings a user to the right page, the 'Individual Progress' page. This page documents one user's progress for the goal in question.</p></li>
-					</div>
+					<ul class="large-block-grid-1">
+						<li><img src="../img/pact/pact-groupgoal.png" alt="Group Goal Wires"><p>On the left is the social feed for the group goals page. Here users can view and comment on their friends progress of their shared goals. The middle image is the 'Group Progress' view, which gives users a more visual way to check their group's progress. Clicking a on a user's profile picture or name brings a user to the right page, the 'Individual Progress' page. This page documents one user's progress for the goal in question.</p></li>
+					</ul>
 					<h4>High-fidelity Wireframes for the Goal Checkin Process</h4>
 					<p></p>
-					<div class="large-block-grid-1">
-						<li><img src="../img/pact/pact-checkin-wire.png"><p>The homescreen, on the left, provides an overview of friends' activity in all goals a user is working towards. All of the users goals are listed on the top, to constantly remind them what they are working toward. User's have the ability to check in from the home screen, making it quick and easy to log their progress.</p></li>
-					</div>
+					<ul class="large-block-grid-1">
+						<li><img src="../img/pact/pact-checkin-wire.png" alt="Check-in Wires"><p>The homescreen, on the left, provides an overview of friends' activity in all goals a user is working towards. All of the users goals are listed on the top, to constantly remind them what they are working toward. User's have the ability to check in from the home screen, making it quick and easy to log their progress.</p></li>
+					</ul>
 				
 				</div>
 			</div>
@@ -79,16 +80,16 @@
 					<h2>Visual Design</h2>
 					<p>Green was chosen as the accent color of the app because green is generally associated with success. To help enforce a social feel, profile pictures of users are shown, and activity is shown as speech bubbles. The “add comment” box is available under every single post to make it clear to users that commenting is encouraged. Users also have the option to like their friends progress, so they can quickly and easily give their friends positive feedback.</p>
 				</div>
-					<div class="large-block-grid-2">
-						<li> <img src="../img/pact/pact-grouppage.png"><div class="centeredlabel"><p><i>Group Goal page for a group trying to study more</i></p></div></li>
-						<li> <img src="../img/pact/pact-home.png"><div class="centeredlabel"><p><i>Home Screen for a signed-in user</i></p></div></li>
-					</div>
+					<ul class="large-block-grid-2">
+						<li> <img src="../img/pact/pact-grouppage.png" alt="Group Goal Page"><div class="centeredlabel"><p><i>Group Goal page for a group trying to study more</i></p></div></li>
+						<li> <img src="../img/pact/pact-home.png" alt="Homepage"><div class="centeredlabel"><p><i>Home Screen for a signed-in user</i></p></div></li>
+					</ul>
 			</div>
 			
 			<hr>
 
 			<div class="returnbutton">
-				<p><a href="index.html">return to portfolio</a></p>
+				<p><a href="../index.html">return to portfolio</a></p>
 			</div>
 		</div>
 
