--- a/pages/robotics.html
+++ b/pages/robotics.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" href="../css/foundation.css">
 		<link rel="stylesheet" href="../css/style.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="robots" content="noindex,nofollow"/>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,600' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Montserrat:400' rel='stylesheet' type='text/css'>
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
@@ -15,7 +16,7 @@
 
 	<body>
 		<div class="header" id="mission">
-			<a href="index.html"> <h1>Nicole Calace</h1> </a>
+			<a href="../index.html"> <h1>Nicole Calace</h1> </a>
 			<h2>Student. Interaction designer.</h2>
 		</div>
 
@@ -23,7 +24,7 @@
 
 		<div class="header" id="links">
 			<ul class="navbar">
-				<li> <div class="selectedpage"> <a href="index.html">product design</a> </div> </li>
+				<li> <div class="selectedpage"> <a href="../index.html">product design</a> </div> </li>
 				<li> <div class="unselectedpage"> <a href="graphicdesign.html">graphic design</a> </div> </li>
 				<li> <div class="unselectedpage"> <a href="about.html">about</a> </div> </li>
 			</ul>
@@ -47,9 +48,9 @@
 
 			<div class="row">
 				<div class="large-11 columns large-centered small-centered">
-					<div class="large-block-grid-1 small-block-grid-1" id="topspace">
-						<li><img src="../img/robotics/2009-robot.jpg"><div class="centeredlabel"><p><i>Our 2009 robot, collecting game pieces.</i></p></div></li>
-					</div>
+					<ul class="large-block-grid-1 small-block-grid-1 topspace">
+						<li><img src="../img/robotics/2009-robot.jpg" alt="2009 Robot"><div class="centeredlabel"><p><i>Our 2009 robot, collecting game pieces.</i></p></div></li>
+					</ul>
 				</div>
 			</div>
 
@@ -63,9 +64,9 @@
 			</div>
 			<div class="row">
 				<div class="large-12 columns">
-					<div class="large-block-grid-1 small-block-grid-1" id="topspace">
-						<li><img src="../img/robotics/2010-robot.jpg"><div class="centeredlabel"><p><i>Our 2010 robot (red bumpers) defending the goal from an opposing alliance's robot</i></p></div></li>
-					</div>
+					<ul class="large-block-grid-1 small-block-grid-1 topspace">
+						<li><img src="../img/robotics/2010-robot.jpg" alt="2010 Robot"><div class="centeredlabel"><p><i>Our 2010 robot (red bumpers) defending the goal from an opposing alliance's robot</i></p></div></li>
+					</ul>
 				</div>
 			</div>
 
@@ -78,8 +79,8 @@
 			</div>
 			<div class="row">
 				<div class="large-12 columns">
-					<ul class="large-block-grid-1 small-block-grid-1" id="topspace">
-						<li><img src="../img/robotics/2011-robot.jpg"></li>
+					<ul class="large-block-grid-1 small-block-grid-1 topspace">
+						<li><img src="../img/robotics/2011-robot.jpg" alt="2011 Robot"></li>
 					</ul>
 				</div>
 			</div>
@@ -93,9 +94,9 @@
 			</div>
 			<div class="row">
 				<div class="large-12 columns">
-					<ul class="large-block-grid-2 small-block-grid-1" id="topspace">
-						<li><img src="../img/robotics/2012-robot.jpg"><div class="centeredlabel"><p><i>Our 2012 robot, taking practice shots in the hallway.</i></p></div></li>
-						<li><img src="../img/robotics/2012-robot2.jpg"><div class="centeredlabel"><p><i>Our 2012 robot, on the left, balancing on a game obstacle for extra points with one of our alliance partners.</i></p></div></li>
+					<ul class="large-block-grid-2 small-block-grid-1 topspace">
+						<li><img src="../img/robotics/2012-robot.jpg" alt="2012 Robot"><div class="centeredlabel"><p><i>Our 2012 robot, taking practice shots in the hallway.</i></p></div></li>
+						<li><img src="../img/robotics/2012-robot2.jpg" alt="2012 Robot"><div class="centeredlabel"><p><i>Our 2012 robot, on the left, balancing on a game obstacle for extra points with one of our alliance partners.</i></p></div></li>
 					</ul>
 				</div>
 
@@ -105,7 +106,7 @@
 			<hr>
 
 			<div class="returnbutton">
-				<p><a href="index.html">return to portfolio</a></p>
+				<p><a href="../index.html">return to portfolio</a></p>
 			</div>
 
 		</div>
