--- a/pages/rosieapp.html
+++ b/pages/rosieapp.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" href="../css/foundation.css">
 		<link rel="stylesheet" href="../css/style.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="robots" content="noindex,nofollow"/>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,600' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Montserrat:400' rel='stylesheet' type='text/css'>
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
@@ -15,7 +16,7 @@
 
 	<body>
 		<div class="header" id="mission">
-			<a href="index.html"> <h1>Nicole Calace</h1> </a>
+			<a href="../index.html"> <h1>Nicole Calace</h1> </a>
 			<h2>Student. Interaction designer.</h2>
 		</div>
 
@@ -24,7 +25,7 @@
 
 		<div class="header" id="links">
 			<ul class="navbar">
-				<li> <div class="selectedpage"> <a href="index.html">product design</a> </div> </li>
+				<li> <div class="selectedpage"> <a href="../index.html">product design</a> </div> </li>
 				<li> <div class="unselectedpage"> <a href="graphicdesign.html">graphic design</a> </div> </li>
 				<li> <div class="unselectedpage"> <a href="about.html">about</a> </div> </li>
 			</ul>
@@ -49,7 +50,7 @@
 			
 			<div class="row">
 				<div class="large-6 columns large-centered addedtopmargin">			
-						<img src="../img/rosieapp/rosie-mobile1.jpg">
+						<img src="../img/rosieapp/rosie-mobile1.jpg" alt="RosieApp v1">
 				</div>
 			</div>
 
@@ -61,7 +62,7 @@
 
 			<div class="row">
 				<div class="large-6 columns large-centered addedtopmargin">
-					<img src="../img/rosieapp/rosie-mobile2.jpg">
+					<img src="../img/rosieapp/rosie-mobile2.jpg" alt="RosieApp v2">
 				</div>
 			</div>
 
@@ -73,7 +74,7 @@
 
 			<div class="row">
 				<div class="large-6 columns large-centered addedtopmargin">
-					<img src="../img/rosieapp/rosie-mobile3.png">
+					<img src="../img/rosieapp/rosie-mobile3.png" alt="RosieApp v3">
 				</div>
 			</div>
 
@@ -94,7 +95,7 @@
 
 			<div class="row">
 				<div class="large-6 columns large-centered addedtopmargin">
-					<img src="../img/rosieapp/rosie-mobile4.png">
+					<img src="../img/rosieapp/rosie-mobile4.png" alt="RosieApp v4">
 				</div>  
 			</div>
 
@@ -113,7 +114,7 @@
 					<p>It was important to the team that RosieApp felt more like your personal shopper, and less like another grocery shopping app. As a result it was important to personify Rosie in the company branding.</p>
 				</div>
 				<div class="large-5 columns small-centered">
-					<img src="../img/rosieapp/rosielogoiteration.png">
+					<img src="../img/rosieapp/rosielogoiteration.png" alt="RosieApp icon iteration">
 					<div class="centeredlabel"><p><i>Some logo iterations</i></div>
 				</div>
 			</div>
@@ -122,7 +123,7 @@
 
 			<div class="row">
 				<div class="moreinfo large-8 columns large-centered small-centered">
-					<img src="../img/rosieapp/rosie-logo-samples.png">
+					<img src="../img/rosieapp/rosie-logo-samples.png" alt="RosieApp Branding">
 					<div class="centeredlabel"><p><i>The Official RosieApp Branding</i></p></div>
 					<div class="centeredlabel"><p><i>(Top: Rosie Icon, Middle: Full Rosie Logo, Bottom: Rosie Web Banner)</i></div>
 				</div>
@@ -131,7 +132,7 @@
 			<hr>
 
 			<div class="returnbutton">
-				<p><a href="index.html">return to portfolio</a></p>
+				<p><a href="../index.html">return to portfolio</a></p>
 			</div>
 		</div>
 
