--- a/pages/wingit.html
+++ b/pages/wingit.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" href="../css/normalize.css">
 		<link rel="stylesheet" href="../css/foundation.css">
 		<link rel="stylesheet" href="../css/style.css">
+		<meta name="robots" content="noindex,nofollow"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,600' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Montserrat:400' rel='stylesheet' type='text/css'>
@@ -15,7 +16,7 @@
 
 	<body>
 		<div class="header" id="mission">
-			<a href="index.html"> <h1>Nicole Calace</h1> </a>
+			<a href="../index.html"> <h1>Nicole Calace</h1> </a>
 			<h2>Student. Interaction designer.</h2>
 		</div>
 
@@ -24,7 +25,7 @@
 
 		<div class="header" id="links">
 			<ul class="navbar">
-				<li> <div class="selectedpage"> <a href="index.html">product design</a> </div> </li>
+				<li> <div class="selectedpage"> <a href="../index.html">product design</a> </div> </li>
 				<li> <div class="unselectedpage"> <a href="graphicdesign.html">graphic design</a> </div> </li>
 				<li> <div class="unselectedpage"> <a href="about.html">about</a> </div> </li>
 			</ul>
@@ -47,10 +48,10 @@
 
 			<div class="row">
 				<div class="large-12 columns moreinfo large-centered small-centered">
-					<ul class="large-block-grid-1 moreinfo" id="topspace">
-							<li><img src="../img/wingit/wingit-homescreen.png"> <div class="centeredlabel"><p><i>Home Page</i></p></div><p>This is the first screen a user will see when they come across the Wingit website, which explains the purpose of the web app. <p></li>
-							<li><img src="../img/wingit/wingit-discover.png"> <div class="centeredlabel"><p><i>Event Discovery Page</i></p></div><p>After signing up with WingIt, users can find events and projects happening around them on the “discover page.” For the sake of time, we had a predefined mile radius to define what was “local,” and did not implement a search feature. Circles in the right hand corner of each event card signify how many people are needed to make the event happen. Filled in circles represent filled slots, and empty circles represent empty slots for the projects/events. </p></li>
-							<li><img src="../img/wingit/wingit-eventcreation.png"> <div class="centeredlabel"><p><i>Event Creation Page</i></p></div><p>The “create” page allows a user to create a new event or project they would like people to join via WingIt. A giant interaction design flaw of the pictured system was that there was no way to have more or less than four attendees. A way to get around this would be to have only one blank “role here” section, and a plus sign that allowed users to make as many roles they wanted for the project.</p></li>
+					<ul class="large-block-grid-1 moreinfo topspace">
+							<li><img src="../img/wingit/wingit-homescreen.png" alt="WingIt Home Page"> <div class="centeredlabel"><p><i>Home Page</i></p></div><p>This is the first screen a user will see when they come across the Wingit website, which explains the purpose of the web app. <p></li>
+							<li><img src="../img/wingit/wingit-discover.png" alt="WingIt Discover Page"> <div class="centeredlabel"><p><i>Event Discovery Page</i></p></div><p>After signing up with WingIt, users can find events and projects happening around them on the “discover page.” For the sake of time, we had a predefined mile radius to define what was “local,” and did not implement a search feature. Circles in the right hand corner of each event card signify how many people are needed to make the event happen. Filled in circles represent filled slots, and empty circles represent empty slots for the projects/events. </p></li>
+							<li><img src="../img/wingit/wingit-eventcreation.png" alt="WingIt Event Page"> <div class="centeredlabel"><p><i>Event Creation Page</i></p></div><p>The “create” page allows a user to create a new event or project they would like people to join via WingIt. A giant interaction design flaw of the pictured system was that there was no way to have more or less than four attendees. A way to get around this would be to have only one blank “role here” section, and a plus sign that allowed users to make as many roles they wanted for the project.</p></li>
 					</ul>
 				</div>
 			</div>
@@ -58,7 +59,7 @@
 			<hr>
 
 			<div class="returnbutton">
-				<p><a href="index.html">return to portfolio</a></p>
+				<p><a href="../index.html">return to portfolio</a></p>
 			</div>
 
 		</div>
