--- a/pages/about.html
+++ b/pages/about.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" href="../css/foundation.css">
 		<link rel="stylesheet" href="../css/style.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="robots" content="noindex,nofollow"/>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,600' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Montserrat:400' rel='stylesheet' type='text/css'>
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
@@ -15,12 +16,12 @@
 
 	<body>
 		<div class="header" id="mission">
-			<a href="index.html"> <h1>Nicole Calace</h1> </a>
+			<a href="../index.html"> <h1>Nicole Calace</h1> </a>
 			<h2>Student. Interaction designer.</h2>
 		</div>
 		<div class="header" id="links">
 			<ul class="navbar">
-				<li> <div class="unselectedpage"> <a href="index.html">product design</a> </div> </li>
+				<li> <div class="unselectedpage"> <a href="../index.html">product design</a> </div> </li>
 				<li> <div class="unselectedpage"> <a href="graphicdesign.html">graphic design</a> </div> </li>
 				<li> <div class="selectedpage"> <a href="about.html">about</a> </div> </li>
 			</ul>
@@ -32,7 +33,7 @@
 		<div class="row">
 			<div class="small-12 large-12 columns moreinfo">
 				<h1 id="hiabout"> Hi, I'm Nicole Calace.</h1>
-				<h2 id="missionstatement">I want simplify the boundary between people &#38; their devices. </h2>
+				<h2 id="missionstatement">I want to simplify the boundary between people &#38; their devices. </h2>
 
 				<p>I’m a sophomore at Cornell University, studying Information Science, with a focus on human centered systems. Primarily I consider myself an interaction designer, but I have experience working as a visual designer and rapid prototyper as well. </p>
 				<p>Currently I am a researcher at Cornell's <a href="http://idl.cornell.edu/">Interaction Design Lab</a>, a manager of <a href="http://popright.in">POPSHOP</a> co-working space, and the president of the <a href="http://cornelluxdesign.com">Cornell User Experience Design club</a>.</p>
@@ -45,12 +46,13 @@
 		<div class="row">
 			<div class="large-8 medium-12 small-12 columns large-centered small-centered" id="sociallinks">
 				<ul class="moreinfo grid large-block-grid-6 small-block-grid-6 hoverfade" >
-					<li><a href="nicolecalace_resume.pdf"><img src="../img/socialicons/resumeicon.png"></a> </li>
-					<li><a href="mailto:nec45@cornell.edu"><img src="../img/socialicons/emailicon.png"></li>
-					<li><a href="http://www.linkedin.com/profile/view?id=240373679"><img src="../img/socialicons/linkedinicon.png"></li>
-					<li><a href="https://behance.net/nicolecalace"><img src="../img/socialicons/behanceicon.png"></a></li>
-					<li><a href="https://github.com/thiswouldbenicole"><img src="../img/socialicons/githubicon.png"></a></li>
-					<li><a href="http://twitter.com/therealactual"><img src="../img/socialicons/twittericon.png"></a></li>
+					<li><a href="nicolecalace_resume.pdf"><img src="../img/socialicons/resumeicon.png" alt="Resume"></a> </li>
+					<li><a href="mailto:nec45@cornell.edu"><img src="../img/socialicons/emailicon.png" alt="Email"></a></li>
+					<li><a href="http://www.linkedin.com/profile/view?id=240373679"><img src="../img/socialicons/linkedinicon.png" alt="LinkedIn"></a></li>
+					<li><a href="http://www.behance.net/nec45"><img src="../img/socialicons/behanceicon.png" alt="Behance"></a></li>
+					<li><a href="https://github.com/thiswouldbenicole"><img src="../img/socialicons/githubicon.png" alt="Github"></a></li>
+					<li><a href="http://twitter.com/therealactual"><img src="../img/socialicons/twittericon.png" alt="Twitter"></a></li>
+				</ul>
 			</div>
 		</div>
 
@@ -58,7 +60,7 @@
 		
 		<hr>
 		<div class="returnbutton">
-			<p><a href="index.html">return to portfolio</a></p>
+			<p><a href="../index.html">return to portfolio</a></p>
 		</div>
 	</div>
 
