--- a/pages/graphicdesign.html
+++ b/pages/graphicdesign.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" href="../css/foundation.css">
 		<link rel="stylesheet" href="../css/style.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="robots" content="noindex,nofollow"/>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,600' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Montserrat:400' rel='stylesheet' type='text/css'>
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
@@ -19,12 +20,12 @@
 
 	<body>
 		<div class="header" id="mission">
-			<a href="index.html"> <h1>Nicole Calace</h1> </a>
+			<a href="../index.html"> <h1>Nicole Calace</h1> </a>
 			<h2>Student. Interaction designer.</h2>
 		</div>
 		<div class="header" id="links">
 			<ul class="navbar">
-				<li> <div class="unselectedpage"> <a href="index.html">product design</a> </div> </li>
+				<li> <div class="unselectedpage"> <a href="../index.html">product design</a> </div> </li>
 				<li> <div class="selectedpage"> <a href="graphicdesign.html">graphic design</a> </div>
 				<li> <div class="unselectedpage"> <a href="about.html">about</a> </div> </li>
 			</ul>
@@ -37,29 +38,29 @@
 
 					<h2>Assorted Illustrations</h2>
 					<p class="bottommargin"> </p>
-					<div class="grid small-block-grid-2 medium-block-grid-2 large-block-grid-4">
-						<li><a href="../img/graphic-design/flat-illustration/flat-ios7-icons.png" data-lightbox="flatillustration"><img src="../img/graphic-design/thumbnails/flat_icon_cover.png"></a></li>
-						<li><a href="../img/graphic-design/flat-illustration/flat-canon-ae-1.png" data-lightbox="flatillustration"><img src="../img/graphic-design/thumbnails/flat_camera_cover.png"></a></li>
-						<li><a href="../img/graphic-design/flat-illustration/deer-child.png" data-lightbox="flatillustration"><img src="../img/graphic-design/thumbnails/deer_child_cover.png"></a></li>
-						<li><a href="../img/graphic-design/flat-illustration/toothpaste fresh-01.png" data-lightbox="flatillustration"><img src="../img/graphic-design/thumbnails/fresh_cover.png"></a></li>
-					</div>
+					<ul class="grid small-block-grid-2 medium-block-grid-2 large-block-grid-4">
+						<li><a href="../img/graphic-design/flat-illustration/flat-ios7-icons.png" data-lightbox="flatillustration"><img src="../img/graphic-design/thumbnails/flat_icon_cover.png" alt="Flat iOS7 Icons"></a></li>
+						<li><a href="../img/graphic-design/flat-illustration/flat-canon-ae-1.png" data-lightbox="flatillustration"><img src="../img/graphic-design/thumbnails/flat_camera_cover.png" alt="Camera Illustration"></a></li>
+						<li><a href="../img/graphic-design/flat-illustration/deer-child.png" data-lightbox="flatillustration"><img src="../img/graphic-design/thumbnails/deer_child_cover.png" alt="Deer"></a></li>
+						<li><a href="../img/graphic-design/flat-illustration/toothpastefresh-01.png" data-lightbox="flatillustration"><img src="../img/graphic-design/thumbnails/fresh_cover.png" alt="'Fresh' Handlettering"></a></li>
+					</ul>
 
 					<h2>"About Me" Icons</h2>
 					<p class="bottommargin">A set of icons made originally for an "About Me" page</p>
-					<div class="grid small-block-grid-2 medium-block-grid-2 large-block-grid-3">
-						<li><a href="../img/graphic-design/about-icons/about-icons-03.png" data-lightbox="abouticons"><img src="../img/graphic-design/thumbnails/about-icons-03th.png"></a></li>
-						<li><a href="../img/graphic-design/about-icons/about-icons-04.png" data-lightbox="abouticons"><img src="../img/graphic-design/thumbnails/about-icons-04th.png"></a></li>
-						<li><a href="../img/graphic-design/about-icons/about-icons-14.png" data-lightbox="abouticons"><img src="../img/graphic-design/thumbnails/about-icons-14th.png"></a></li>			
-					</div>
+					<ul class="grid small-block-grid-2 medium-block-grid-2 large-block-grid-3">
+						<li><a href="../img/graphic-design/about-icons/about-icons-03.png" data-lightbox="abouticons"><img src="../img/graphic-design/thumbnails/about-icons-03th.png" alt="Design Icon"></a></li>
+						<li><a href="../img/graphic-design/about-icons/about-icons-04.png" data-lightbox="abouticons"><img src="../img/graphic-design/thumbnails/about-icons-04th.png" alt="Maker Icon"></a></li>
+						<li><a href="../img/graphic-design/about-icons/about-icons-14.png" data-lightbox="abouticons"><img src="../img/graphic-design/thumbnails/about-icons-14th.png" alt="Student Icon"></a></li>			
+					</ul>
 
 					<h2>Device Frames</h2>
 					<p class="bottommargin">A series of device frames made to put around wireframes to give them more context</p>
-					<div class="grid small-block-grid-2 medium-block-grid-2 large-block-grid-4">
-						<li><a href="../img/graphic-design/flat-frames/flat-white-iphone.png" data-lightbox="deviceframes"><img src="../img/graphic-design/thumbnails/flat-white-iphone-th.png"></a></li>
-						<li><a href="../img/graphic-design/flat-frames/flat-black-iphone.png" data-lightbox="deviceframes"><img src="../img/graphic-design/thumbnails/flat-black-iphone-th.png"></a></li>
-						<li><a href="../img/graphic-design/flat-frames/flat-htcone.png" data-lightbox="deviceframes"><img src="../img/graphic-design/thumbnails/flat-htcone-th.png"></a></li>
-						<li><a href="../img/graphic-design/flat-frames/flat-imac.png" data-lightbox="deviceframes"><img src="../img/graphic-design/thumbnails/flat-imac-th.png"></a></li>		
-					</div>
+					<ul class="grid small-block-grid-2 medium-block-grid-2 large-block-grid-4">
+						<li><a href="../img/graphic-design/flat-frames/flat-white-iphone.png" data-lightbox="deviceframes"><img src="../img/graphic-design/thumbnails/flat-white-iphone-th.png" alt="White iPhone"></a></li>
+						<li><a href="../img/graphic-design/flat-frames/flat-black-iphone.png" data-lightbox="deviceframes"><img src="../img/graphic-design/thumbnails/flat-black-iphone-th.png" alt="Black iPhone"></a></li>
+						<li><a href="../img/graphic-design/flat-frames/flat-htcone.png" data-lightbox="deviceframes"><img src="../img/graphic-design/thumbnails/flat-htcone-th.png" alt="HTC phone"></a></li>
+						<li><a href="../img/graphic-design/flat-frames/flat-imac.png" data-lightbox="deviceframes"><img src="../img/graphic-design/thumbnails/flat-imac-th.png" alt="Computer"></a></li>		
+					</ul>
 
 					<!--<h2>POPSHOP Poster</h2>
 					<p class="bottommargin">A poster, and matching Facebook cover photo, for a POPSHOP event</p>
